<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingStart="15dp"
	android:paddingEnd="15dp"
	android:orientation="vertical">

	<androidx.appcompat.widget.AppCompatEditText
		android:layout_height="48dp"
		android:layout_width="match_parent"
		android:ems="10"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:id="@+id/mEditName"
		android:singleLine="true"
		android:maxLines="1"
		android:hint="@string/enter_new_name"
		android:textSize="14sp"
		android:layout_marginTop="10dp"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:layout_marginTop="30dp"
		android:gravity="right|center_vertical"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		tools:ignore="RtlHardcoded">

		<androidx.appcompat.widget.AppCompatButton
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cancel"
			android:id="@+id/mButtonCancel"/>

		<androidx.appcompat.widget.AppCompatButton
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/ok"
			android:id="@+id/mButtonOk"/>

	</LinearLayout>

</LinearLayout>